--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ sysinfo.txt
 *.unitypackage
 Assets/Image/prefab/leaf.prefab
 Library/metadata/00/00000000000000005100000000000000
+Assets/mian.unity
